src/test/deca/context/invalid/provided/affect-incompatible.deca
// Description:
//    Affectation et typage
//
// Resultats:
//    Ligne 15: Affectation de types incompatibles.
// 
// Historique:
//    cree le 01/01/2023

//# src/test/deca/context/invalid/provided/affect-incompatible.deca:17:7: Can't assign type : "boolean" to type :"int" : rule 3.28

{
   int a;
   boolean b;

   // Doit etre refuse.
   a = b;
}
